--- a/public/css/nhsuk.css
+++ b/public/css/nhsuk.css
@@ -1776,6 +1776,60 @@ strong {
     display: block; }
 
 /*
+   HTML elements
+*/
+table tr th, .table tr th {
+  font-weight: normal;
+  font-size: 1em;
+  line-height: 1.375em; }
+
+table tr td, table tr th, .table tr td, .table tr th {
+  padding: 16px; }
+
+table tr:first-child th, .table tr:first-child th {
+  font-weight: bold; }
+
+table--grey, .table--grey {
+  background-color: #f5f5f5; }
+
+form .form-control {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "FS Me", Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  text-transform: none;
+  width: 100%;
+  padding: 4px;
+  background-color: #fff;
+  border: 2px solid #000; }
+  @media (min-width: 641px) {
+    form .form-control {
+      font-size: 24px;
+      line-height: 32px;
+      width: 50%; } }
+  @media (min-width: 925px) {
+    form .form-control {
+      font-size: 24px;
+      line-height: 32px; } }
+
+form .form-label-bold {
+  font-family: "FS Me", Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 32px;
+  text-transform: none; }
+
+form .form-group {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+  width: 100%; }
+
+/*
    Colours.
 */
 .sr-only {
@@ -1788,6 +1842,8 @@ strong {
   clip: rect(0, 0, 0, 0);
   border: 0; }
 
+.local-header-white-bg--question,
+.local-header-white-bg > *,
 .global-header--question,
 .global-header > *,
 .global-footer--question,
@@ -1796,10 +1852,10 @@ strong {
 .notification-banner > * {
   max-width: 960px;
   margin: 0 16px;
-  padding: 8px 0;
-  line-height: 24px;
-  font-size: 16px; }
+  padding: 8px 0; }
   @media (min-width: 641px) {
+    .local-header-white-bg--question,
+    .local-header-white-bg > *,
     .global-header--question,
     .global-header > *,
     .global-footer--question,
@@ -1808,6 +1864,8 @@ strong {
     .notification-banner > * {
       margin: 0 16px; } }
   @media (min-width: 925px) {
+    .local-header-white-bg--question,
+    .local-header-white-bg > *,
     .global-header--question,
     .global-header > *,
     .global-footer--question,
@@ -1816,6 +1874,8 @@ strong {
     .notification-banner > * {
       margin: 0 32px; } }
   @media (min-width: 1024px) {
+    .local-header-white-bg--question,
+    .local-header-white-bg > *,
     .global-header--question,
     .global-header > *,
     .global-footer--question,
@@ -1824,15 +1884,26 @@ strong {
     .notification-banner > * {
       margin: 0 auto; } }
 
+.local-header-white-bg__js-hidden,
 .global-header__js-hidden,
 .global-footer__js-hidden,
 .notification-banner__js-hidden {
   display: none; }
 
+.local-header-white-bg__hiviz,
 .global-header__hiviz,
 .global-footer__hiviz,
 .notification-banner__hiviz {
   background-color: #ffca55; }
+
+.global-header--question,
+.global-header > *,
+.global-footer--question,
+.global-footer > *,
+.notification-banner--question,
+.notification-banner > * {
+  font-size: 16px;
+  line-height: 24px; }
 
 .global-header--inner {
   padding-bottom: 16px;
@@ -1890,46 +1961,6 @@ strong {
         .skiplinks--link:focus {
           left: 0;
           position: absolute; } }
-
-/*
-   Form elements
-*/
-form .form-control {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: "FS Me", Arial, sans-serif;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 32px;
-  text-transform: none;
-  width: 100%;
-  padding: 4px;
-  background-color: #fff;
-  border: 2px solid #000; }
-  @media (min-width: 641px) {
-    form .form-control {
-      font-size: 24px;
-      line-height: 32px;
-      width: 50%; } }
-  @media (min-width: 925px) {
-    form .form-control {
-      font-size: 24px;
-      line-height: 32px; } }
-
-form .form-label-bold {
-  font-family: "FS Me", Arial, sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 32px;
-  text-transform: none; }
-
-form .form-group {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  float: left;
-  width: 100%; }
 
 /*
   Results page
