--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -1,6 +1,73 @@
 @import "betahealth/nhsuk";
 
 /*
+   HTML elements
+*/
+table, .table {
+  tr {
+    th {
+      font-weight: normal;
+      font-size:1em;
+      line-height: 1.375em;
+    }
+    td, th {
+      padding:16px;
+    }
+    &:first-child {
+      th {
+        font-weight: bold;
+      }
+    }
+    td{
+
+    }
+  }
+  &--grey {
+    background-color:#f5f5f5;
+  }
+}
+
+form {
+  .form-control {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: "FS Me", Arial, sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    text-transform: none;
+    width: 100%;
+    padding: 4px;
+    background-color: #fff;
+    border: 2px solid #000;
+    @include media(tablet) {
+      font-size: 24px;
+      line-height: 32px;
+      width: 50%;
+    }
+    @include media(desktop) {
+      font-size: 24px;
+      line-height: 32px;
+    }
+  }
+  .form-label-bold {
+    font-family: "FS Me", Arial, sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    text-transform: none;
+  }
+  .form-group {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    float: left;
+    width: 100%;
+  }
+}
+
+/*
    Colours.
 */
 $hiviz: #ffca55;
@@ -18,6 +85,7 @@ $blue: #0072c6;
   border: 0;
 }
 
+.local-header-white-bg,
 .global-header,
 .global-footer,
 .notification-banner {
@@ -26,8 +94,6 @@ $blue: #0072c6;
     max-width:960px;
     margin: 0 16px;
     padding: 8px 0;
-    line-height: 24px;
-    font-size: 16px;
     @include media(tablet) {
       margin: 0 16px;
     }
@@ -46,6 +112,16 @@ $blue: #0072c6;
   }
 }
 
+
+.global-header,
+.global-footer,
+.notification-banner {
+  &--question,
+  > * {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
 
 .global-header {
   &--inner {
@@ -113,48 +189,7 @@ $blue: #0072c6;
   }
 }
 
-/*
-   Form elements
-*/
-form {
-  .form-control {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    font-family: "FS Me", Arial, sans-serif;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-    text-transform: none;
-    width: 100%;
-    padding: 4px;
-    background-color: #fff;
-    border: 2px solid #000;
-    @include media(tablet) {
-      font-size: 24px;
-      line-height: 32px;
-      width: 50%;
-    }
-    @include media(desktop) {
-      font-size: 24px;
-      line-height: 32px;
-    }
-  }
-  .form-label-bold {
-    font-family: "FS Me", Arial, sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 32px;
-    text-transform: none;
-  }
-  .form-group {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    float: left;
-    width: 100%;
-  }
-}
+
 /*
   Results page
 */
