--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -462,6 +462,14 @@ form {
 /*
   Other
 */
-.local-header--question {
+.local-header{
+  &--question {
     padding: 0;
+  }
+  &__intro {
+    &--fullwidth {
+      max-width:100%;
+      padding-top:32px;
+    }
+  }
 }
