--- a/public/css/nhsuk.css
+++ b/public/css/nhsuk.css
@@ -768,6 +768,8 @@ table--grey, .table--grey { background-color: #f5f5f5; }
 
 hr--no-color, .hr--no-color { background-color: transparent; }
 
+hr--fullwidth, .hr--fullwidth { width: 100%; margin: 56px 0; }
+
 form .form-control { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-family: "FS Me", Arial, sans-serif; font-size: 24px; font-weight: 400; line-height: 32px; text-transform: none; width: 100%; padding: 4px; background-color: #fff; border: 2px solid #000; }
 
 @media (min-width: 641px) { form .form-control { font-size: 24px; line-height: 32px; width: 50%; } }
@@ -797,6 +799,20 @@ form .form-group { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; 
 .local-header-white-bg__js-hidden, .global-header__js-hidden, .global-footer__js-hidden, .notification-banner__js-hidden { display: none; }
 
 .local-header-white-bg__hiviz, .global-header__hiviz, .global-footer__hiviz, .notification-banner__hiviz { background-color: #ffca55; }
+
+.local-header { margin-top: 0; padding-top: 32px; }
+
+.local-header--fullwidth { max-width: 100%; }
+
+.local-header--fullwidth h1 { padding-top: 0; }
+
+.local-header--fullwidth .local-header__intro * { font-size: 1em; line-height: 1.4em; }
+
+.local-header--no-padding { padding: 0; }
+
+.local-header--no-padding-lr { padding-left: 0; padding-right: 0; }
+
+.local-header__intro--fullwidth { padding-top: 24px; margin-top: 24px; }
 
 .global-header--question, .global-header > *, .global-footer--question, .global-footer > *, .notification-banner--question, .notification-banner > * { font-size: 16px; line-height: 24px; }
 
