--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -66,6 +66,16 @@ table, .table {
     }
 
   }
+  &.opening-times {
+    tr {
+      td {
+        margin-top:6px;
+        @include media(tablet) {
+          margin-top:16px;
+        }
+      }
+    }
+  }
   &--grey {
     background-color:#f5f5f5;
   }
@@ -78,7 +88,7 @@ hr, .hr {
   &--fullwidth {
     width:100%;
     margin:32px 0;
-    background-color: $grey;		
+    background-color: $grey;
     height:2px;
     @include media(desktop) {
       margin:56px 0;
