--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -514,6 +514,8 @@ form {
   &--blue {
     background-color: $callout-blue;
     border-left: 8px solid $callout-border-blue;
+  }
+  &--half-padding {
     padding: 8px 16px;
   }
 }
