:pill: maintain 50/50 column on tablets

--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -239,6 +239,10 @@ form {
       }
       .column {
         &--one-half {
+          @include media(tablet) {
+            float: left;
+            width: 50%;
+          }
           &:first-child {
             p {
               text-transform:capitalize;
