:pill: break the columns on mobile

--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -234,6 +234,11 @@ form {
       }
       .column {
         &--one-half {
+          @include media(tablet) {
+            float: left;
+            width: 50%;
+            margin-top: 0px;
+          }
           &:first-child {
             p {
               text-transform:capitalize;
