:strawberry: change default font to fruitger

--- a/scss/betahealth/environment/settings/_globals.scss
+++ b/scss/betahealth/environment/settings/_globals.scss
@@ -1,7 +1,7 @@
 $is-ie: false !default;
 $mobile-ie6: true !default;
 
-$font-family: "FS Me" !default;
+$font-family: "Frutiger W01" !default;
 
 //$font-cdn-path: "/* @echo FONT_CDN_PATH */assets/"; // <- Correct way, need to add path
 $font-cdn-path: "https://dhrlmnmyf2njb.cloudfront.net/assets/";
