:two: retain horizontal style when displaying two columns

--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -74,6 +74,28 @@ table, .table {
           margin-top:16px;
         }
       }
+      &.one-session {
+        height:42px;
+        border-bottom: 1px solid #d9dde0;
+        margin-top: 0px;
+        display: block;
+        width: 400px;
+        td {
+          display:inline-block;
+          border:none;
+          padding: 10px 0 0;
+          margin: 0;
+          &:first-child {
+            font-weight:bold;
+            &:after {
+              content:":";
+            }
+          }
+          &:last-child {
+            left:200px;
+          }
+        }
+      }
     }
   }
   &--grey {
