--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -107,7 +107,18 @@ table, .table {
           td {
             padding:0;
             &:first-child {
-              font-weight:normal;
+              padding-top:10px;
+              @include media(tablet) {
+                padding-top:0px;
+                font-weight:normal;
+              }
+            }
+          }
+          &:first-child {
+            td {
+              &:first-child {
+                padding-top: 0;
+              }
             }
           }
         }
