--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -99,6 +99,12 @@ table, .table {
       tr {
         &:last-child {
           border:none;
+          td {
+            border:none;
+          }
+        }
+        td {
+          padding: 16px 0;
         }
         &.one-session {
           height:30px;
