:first_quarter_moon_with_face: reduced padding of mobiles for exceptional opening hours

--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -100,9 +100,10 @@ table, .table {
           }
         }
         td {
-          padding: 16px 0;
+          padding:0;
           margin-top:6px;
           @include media(tablet) {
+            padding: 16px 0;
             margin-top:16px;
           }
         }
