:open_hands: reduced padding for opening hours on mobile

--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -89,6 +89,12 @@ table, .table {
           }
         }
       }
+      td {
+        margin-top:6px;
+        @include media(tablet) {
+          margin-top:16px;
+        }
+      }
     }
     &--exceptional {
       margin:0;
