:open_mouth: Resolved error message colour issue

--- a/scss/c2s/c2s.scss
+++ b/scss/c2s/c2s.scss
@@ -316,6 +316,9 @@ form {
 .local-header-white-bg {
   > .local-header {
     background-color:$white;
+    h1 {
+      color: $black;
+    }
   }
 }
 
