:imp: erorr in scss

--- a/scss-c2s/c2s.scss
+++ b/scss-c2s/c2s.scss
@@ -312,7 +312,7 @@ form {
     display:none;
   }
   &__hiviz {
-    background-color: $hiviz;
+    background-color: $yellow-50;
   }
 }
 .local-header-white-bg {
