:iphone: retina logos

--- a/scss-0.4.3/components/_global-footer.scss
+++ b/scss-0.4.3/components/_global-footer.scss
@@ -43,7 +43,9 @@
       margin-bottom: $baseline-grid-unit * 12;
     }
 
-    @media(min-resolution: 192dpi) {
+    @media
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi) {
       background-image: url("images/logotype-nhs-colour@2x.png");
       background-size: 79px 32px;
     }
