--- a/scss-0.4.3/components/_global-header.scss
+++ b/scss-0.4.3/components/_global-header.scss
@@ -27,7 +27,9 @@
   text-indent: -999em;
   width: 79px;
 
-  @media(min-resolution: 192dpi) {
+  @media
+    (-webkit-min-device-pixel-ratio: 2), 
+    (min-resolution: 192dpi) {
     background-image: url("images/logotype-nhs-colour__reverse@2x.png");
     background-size: 79px 32px;
   }
