:five: Update frontend-library version to 0.5.0

--- a/scss-0.5.0/nhsuk.scss
+++ b/scss-0.5.0/nhsuk.scss
@@ -1,4 +1,7 @@
-@import "normalize";
+@import "normalize/variables";
+@import "normalize/vertical-rhythm";
+@import "normalize/normalize-mixin";
+
 @import "environment/tools/mixins/addons";
 
 @import "environment/generic/border-box";
