--- a/scss-c2s/c2s.scss
+++ b/scss-c2s/c2s.scss
@@ -744,3 +744,27 @@ form {
     }
   }
 }
+
+progress {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 5px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  background-color: transparent;
+  color: red;
+  z-index: 1;
+  &::-webkit-progress-bar {
+    background-color: transparent;
+  }
+  &::-webkit-progress-value {
+    background-color: red;
+  }
+  &::-moz-progress-bar {
+    background-color: red;
+  }
+}
