--- a/scss-0.7.0/components/_global-header.scss
+++ b/scss-0.7.0/components/_global-header.scss
@@ -1,6 +1,7 @@
 @import "../environment/settings/colours";
 @import "../environment/tools/mixins/layout";
 @import "../environment/tools/mixins/typography";
+@import "../environment/tools/functions/asset-urls";
 
 .global-header {
   background-color: $white;
@@ -20,7 +21,7 @@
 }
 
 .global-header__link {
-  background: url("images/logotype-nhs-colour__reverse.png") no-repeat;
+  background: image-url("logotype-nhs-colour__reverse.png") no-repeat;
   background-size: contain;
   display: block;
   height: 32px;
@@ -30,7 +31,7 @@
   @media
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi) {
-    background-image: url("images/logotype-nhs-colour__reverse@2x.png");
+    background-image: image-url("logotype-nhs-colour__reverse@2x.png");
     background-size: 79px 32px;
   }
 
